WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303498
REGRESSION(
301075@main
): Address a style error in CachedImageClient.h and add its source file to WebCore.xcodeproj
https://bugs.webkit.org/show_bug.cgi?id=303498
Summary
REGRESSION(301075@main): Address a style error in CachedImageClient.h and add...
Said Abou-Hallawa
Reported
2025-12-03 13:40:48 PST
CachedImageClient should not be marked WEBCORE_EXPORT. Also CachedImageClient.cpp was not added to WebCore.xcodeproj although it was added to WebCore/Sources.txt.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-03 13:41:48 PST
<
rdar://problem/165788371
>
Said Abou-Hallawa
Comment 2
2025-12-03 13:46:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54794
EWS
Comment 3
2025-12-03 18:43:26 PST
Committed
303881@main
(083cd35716ec): <
https://commits.webkit.org/303881@main
> Reviewed commits have been landed. Closing PR #54794 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug