REGRESSION(301075@main): Address a style error in CachedImageClient.h and add its source file to WebCore.xcodeproj https://bugs.webkit.org/show_bug.cgi?id=303498 rdar://165788371

Reviewed by Geoffrey Garen.

CachedImageClient should not be marked WEBCORE_EXPORT. Mark the constructor and
imageFrameAvailable() to be WEBCORE_EXPORT. Also add CachedImageClient.cpp to
WebCore.xcodeproj.

* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/loader/cache/CachedImageClient.cpp:
* Source/WebCore/loader/cache/CachedImageClient.h:

Canonical link: https://commits.webkit.org/303881@main