Source/WebCore/loader/cache/CachedImageClient.h
@@ -34,7 +34,7 @@ class IntRect;
 
 enum class VisibleInViewportState { Unknown, Yes, No };
 
-class WEBCORE_EXPORT CachedImageClient : public CachedResourceClient {
+class CachedImageClient : public CachedResourceClient {
     WTF_DEPRECATED_MAKE_FAST_ALLOCATED(CachedImageClient);
 public:
     virtual ~CachedImageClient() = default;
@@ -48,7 +48,7 @@ public:
     virtual bool canDestroyDecodedData() const { return true; }
 
     // Called when a new decoded frame for a large image is available or when an animated image is ready to advance to the next frame.
-    virtual VisibleInViewportState imageFrameAvailable(CachedImage&, ImageAnimatingState, const IntRect*);
+    WEBCORE_EXPORT virtual VisibleInViewportState imageFrameAvailable(CachedImage&, ImageAnimatingState, const IntRect*);
     virtual VisibleInViewportState imageVisibleInViewport(const Document&) const { return VisibleInViewportState::No; }
 
     virtual void didRemoveCachedImageClient(CachedImage&) { }
@@ -56,6 +56,9 @@ public:
     virtual void scheduleRenderingUpdateForImage(CachedImage&) { }
 
     virtual bool allowsAnimation() const { return true; }
+
+protected:
+    WEBCORE_EXPORT CachedImageClient();
 };
 
 } // namespace WebCore
